--- a/src/components/ui-kit/micro-buttons/like/like.pug
+++ b/src/components/ui-kit/micro-buttons/like/like.pug
@@ -1,7 +1,7 @@
 mixin likeMode( item )
-  - const iconSuffix = item.pressed ? '' : '_border'
-  - const iconAdditionalClass = item.pressed ? 'gradient-fill' : ''
   .like-mode__icon
-    span.material-icons-outlined( class=iconAdditionalClass ) #{'favorite' + iconSuffix}
+    - const iconCode = item.pressed ? 'favorite' : 'favorite_border'
+    - const iconAdditionalClass = item.pressed ? 'gradient-fill' : ''
+    span.material-icons-outlined( class=iconAdditionalClass ) #{iconCode}
   .like-mode__counter
     span #{item.likecount}
