Minor codestyle notable fixes everywhere 2

--- a/src/components/ui-kit/advantage-bar/advantage-bar.pug
+++ b/src/components/ui-kit/advantage-bar/advantage-bar.pug
@@ -1,4 +1,4 @@
-mixin advantages( items=[] )
+mixin advantageBars( items=[] )
   each item in items
     .advantages-block
       .advantages-block__text-bar
