--- a/src/components/ui-kit/color-sample/color-sample.pug
+++ b/src/components/ui-kit/color-sample/color-sample.pug
@@ -1,10 +1,8 @@
-mixin colors( items=[] )
+mixin colorSamples( items=[] )
   .color-items__holder
     each item in items
       .color-item
-        .color-item__sample&attributes({
-          class: [item.opaque, "background-color_" + item.name]
-        })
+        .color-item__sample( class=`${item.opaque} background-color_${item.name}` )
         .color-item__description
           span.color-item__description__pseudoname #{item.pseudoname}
           span.color-item__description__hex-code #{item.hexcode}
