--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -145,7 +145,7 @@ body.ui-kit__body
     .form-elements__wrap_bottom.indention_wrap
       .form-elements__column.form-elements__column_left
         .indention_single
-          +advantages([
+          +advantageBars([
             {
               icon: "insert_emoticon",
               title: "Комфорт",
