--- a/src/components/ui-kit/micro-buttons/toggle/toggle.scss
+++ b/src/components/ui-kit/micro-buttons/toggle/toggle.scss
@@ -1,1 +1,20 @@
 @import "@variables";
+
+.toggle-mode {
+  &__icon {
+    position: relative;
+    display: inherit;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+  }
+
+  &__text {
+    display: flex;
+    justify-content: space-between;
+    text-transform: uppercase;
+    font-size: 12px;
+    color: $valhalla;
+    margin-block: 20px 5px;
+  }
+}
