--- a/src/styles/ui-kit-pages.scss
+++ b/src/styles/ui-kit-pages.scss
@@ -68,3 +68,33 @@
 .additional-padding {
   padding-top: 11px;
 }
+
+.micro-button {
+  &_wrap {
+    display: flex;
+    height: 20px;
+    width: 40px;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 1px;
+    margin-right: 10px;
+    box-sizing: border-box;
+    cursor: pointer;
+  }
+
+  &_released {
+    border-color: $valhalla;
+    color: $valhalla;
+    opacity: .25;
+  }
+
+  &_pressed {
+    border-color: $perfume;
+    color: $perfume;
+    opacity: 1;
+  }
+
+  &__label > label {
+    font-size: 10px;
+  }
+}
