--- a/src/components/buttons/like/like.pug
+++ b/src/components/buttons/like/like.pug
@@ -2,7 +2,7 @@ mixin likeButtons( items=[] )
   each item in items
     - const iconCode = item.pressed ? 'favorite' : 'favorite_border'
     - const iconAdditionalClass = item.pressed ? 'gradient-fill' : ''
-    - const buttonPressedClass = item.pressed ? 'micro-button_pressed' : ''
+    - const buttonPressedClass = item.pressed ? 'like-button_pressed' : ''
 
     .like-button( class=buttonPressedClass )
       .like-button__icon
