--- a/src/components/buttons/toggle/toggle.scss
+++ b/src/components/buttons/toggle/toggle.scss
@@ -11,9 +11,21 @@
       display: inherit;
       margin-inline: 3px;
       font-size: 12px;
-      fill: $valhalla;
       -webkit-background-clip: unset;
       background-clip: unset;
+      -webkit-transition: transform 0.3s ease;
+      -moz-transition: transform 0.3s ease;
+      -ms-transition: transform 0.3s ease;
+      -o-transition: transform 0.3s ease;
+      transition: transform 0.3s ease;
+    }
+
+    & > .gradient-fill {
+      -webkit-transform: translateX(20px);
+      -moz-transform: translateX(20px);
+      -ms-transform: translateX(20px);
+      -o-transform: translateX(20px);
+      transform: translateX(20px);
     }
   }
 
