toggle-button is under construction 4

--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -87,7 +87,7 @@ body.ui-kit__body
       .form-elements__column.form-elements__column_center
         .indention_double
           .block__toggle-buttons
-            +titleBar("toggle button")
+            +titleBar("toggle")
             .toggle-buttons__array.additional-padding
               +toggleButtons([
                 { pressed: true, label: "Получать спецпредложения" },
