--- a/src/components/buttons/toggle/toggle.scss
+++ b/src/components/buttons/toggle/toggle.scss
@@ -30,8 +30,9 @@
   }
 
   &__label {
+    display: inherit;
+    align-items: flex-start;
     font-size: 14px;
-    line-height: 24px;
     opacity: .75;
   }
 }
@@ -39,5 +40,6 @@
 .toggle-buttons__array {
   display: grid;
   grid-row: 2;
-  grid-gap: 10px;
+  grid-gap: 14px;
+  margin-bottom: 5px;
 }
