Added new radio-button mixin

--- a/src/components/buttons/toggle/toggle.pug
+++ b/src/components/buttons/toggle/toggle.pug
@@ -5,7 +5,6 @@ mixin toggleButtons( items=[] )
 
     .toggle-button 
       .toggle-button__elem( class=buttonPressedClass )
-        span.material-icons.dot( class=iconAdditionalClass )
+        span.dot( class=iconAdditionalClass )
       .toggle-button__label
         label #{item.label}
-
