--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -5,6 +5,7 @@ include ../components/star-rate/star-rate.pug
 include ../components/title-bar/title-bar.pug
 include ../components/buttons/toggle/toggle.pug
 include ../components/buttons/like/like.pug
+include ../components/buttons/radio/radio.pug
 
 body.ui-kit__body
   +header()
@@ -89,6 +90,11 @@ body.ui-kit__body
           +titleBar("checkbox buttons")
         .block__radio-buttons.indention_double
           +titleBar("radio buttons")
+          .radio-buttons__array.additional-padding 
+            +radioButtons([
+              { id: "male", pressed: true, label: "Мужчина" },
+              { id: "female", pressed: false, label: "Женщина" }
+            ])
         .block__toggle-buttons.indention_double
           +titleBar("toggle")
           .toggle-buttons__array.additional-padding
