Radio mixin is under construction

--- a/src/components/buttons/radio/radio.pug
+++ b/src/components/buttons/radio/radio.pug
@@ -4,10 +4,8 @@ mixin radioButtons( items=[] )
     - const buttonPressedClass = item.pressed ? 'radio-button__elem_pressed' : ''
     - const buttonChecked = item.pressed ? true : false
 
-    .radio-button 
+    .radio-button
       .radio-button__elem( class=buttonPressedClass )
         input( type='radio' name='sex' id=item.id checked=buttonChecked )
-        label( for=item.id )
-        span.dot( class=iconAdditionalClass )
       .radio-button__label
-        label #{item.label}
+        label( for=item.id ) #{item.label}
