--- a/src/components/buttons/radio/radio.pug
+++ b/src/components/buttons/radio/radio.pug
@@ -1,8 +1,7 @@
 mixin radioButtons( items=[] )
   each item in items
-    - const iconAdditionalClass = item.pressed ? 'gradient-fill' : ''
     - const buttonChecked = item.pressed ? true : false
 
     .radio-button
-        input( type='radio' name='sex' id=item.id checked=buttonChecked )
-        label( for=item.id ) #{item.label}
+        input.radio-button__elem( type='radio' name='sex' id=item.id checked=buttonChecked )
+        label.radio-button__label( for=item.id ) #{item.label}
